--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" >
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="this is a big lion in a pic">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="this is a big lion in a pic" title="Lion King"> 
   </body>
 </html>
